monitoring/istio-monitoring-prod-vs.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-kiali-vs
  namespace: istio-system
spec:
  hosts:
  - kiali.tools.<YOUR_DOMAIN>.eu
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: "kiali.istio-system.svc.cluster.local"
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-grafana-vs
  namespace: istio-system
spec:
  hosts:
  - grafana.tools.<YOUR_DOMAIN>.eu
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: "grafana.istio-system.svc.cluster.local"
        port:
          number: 3000
