monitoring/istio-monitoring-prod2-vs.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-kiali-vs
  namespace: istio-system
spec:
  hosts:
  - kiali.services.usercentrics.eu
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: "kiali.istio-system.svc.cluster.local"
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-grafana-vs
  namespace: istio-system
spec:
  hosts:
  - grafana.services.usercentrics.eu
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: "grafana.istio-system.svc.cluster.local"
        port:
          number: 3000
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: istio-prometheus-vs
#  namespace: istio-system
#spec:
#  hosts:
#  - prometheus.services.usercentrics.eu
#  gateways:
#  - istio-gateway
#  http:
#  - route:
#    - destination:
#        host: "prometheus.istio-system.svc.cluster.local"
#        port:
#          number: 9090
